samples/_failures_safe/1761043607_d92c67_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_067b7575.c: In function ‘main’:
./samples/SAFE/__tmp_067b7575.c:175:5: error: expected declaration or statement at end of input
  175 |     int num_count = 0;
      |     ^~~
